# rs232server

./: .gitignore  COPYING  HACKING  PKGBUILD  README  README.md  TODO  ampclient.py  ampclient_dbus.py  ampserver.desktop  ampserver.py  ampserver_dbus.py  ampserver_queue.py  ampserver_serial.py  azur_cmds.py  cambridge.py  error_codes.py  miniclient.py  rs232.conf.example  rs232_server.py  rs232server  rs232server.desktop  rs232server.service  setup.py  uk.co.madeo.ampserver.conf  uk.co.madeo.rs232server.conf
client/: Makefile  alsaclient_dbus.py  ampclient.c  ampclient.py  azurclient_dbus.py  rs232client.py  rs232client_dbus.py
etc/: uk.co.madeo.rs232server.conf
miniclient/: Makefile  Makefile.am  autogen.sh  configure.ac  miniclient.c
miniclient/libtermkey/: Makefile.am  driver-csi.c  termkey-internal.h  termkey.c  termkey.h
miniclient/src/: Makefile.am  miniclient.c  miniclient.h
rs232modules/: ArcamService.py  Azur1Service.py  AzurService.py  BaseService.py  LgtvService.py  Mqtt.py  PioneerService.py  SerialController.py  Shared.py  arcam_cmds.py  azur1_cmds.py  azur_cmds.py  azur_service.py  base_service.py  lgtv_cmds.py  lgtv_service.py  pioneer_cmds.py  serial_controller.py  shared.py
server/: AzurService.py  LgtvService.py  SerialController.py  Shared.py  alsa_service.py  ampserver.py  ampserver_dbus.py  ampserver_queue.py  ampserver_serial.py  azur_cmds.py  azur_service.py  base_service.py  lgtv_cmds.py  lgtv_service.py  miniclient.py  rs232.conf  rs232_server.py  serial_controller.py  serial_queue.py
